2005-11-07  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkpathbar.[hc]: Set focus-on-click to FALSE for all buttons.
	Don't grab focus when a slider button is pressed, instead, use
	a bit in the pathbar struct to determine whether to scroll up
	or down.  (#314486, Carlos Garnacho)
	
	* gtk/gtktreeview.c (gtk_tree_view_search_key_press_event): Handle
	Shift-G to go to the previous match, like firefox.  (#320061, 
	Christian Neumair)

	* gtk/gtkentrycompletion.c (_gtk_entry_completion_popup): 
	Don't popup the completions if the focus has already been
	moved somewhere else.  (#319914, Christian Persch)

	* gtk/gtktoolitem.c (_gtk_tool_item_toolbar_reconfigured): 
	Raise the drag_window after reconfiguring the 
	toolbar.  (#320803, Christian Persch)

	* gtk/gtkrbtree.c: Plug a small memory leak.  (#320777,
	Antonio Sacchi)
	
2005-11-07  Tor Lillqvist  <tml@novell.com>

	* gdk/win32/gdkcursor-win32.c (pixbuf_to_hbitmaps_normal):
	Correct the calculation of maskstride. (#320152, Peter Zelezny)

2005-11-06  Tor Lillqvist  <tml@novell.com>

	* gdk/win32/gdkcursor-win32.c: As there is only one GdkDisplay in
	the Win32 backend, check that GdkDisplay* parameters are equal to
	_gdk_display instead of using the unnecessarily general
	GDK_IS_DISPLAY().
	(pixbuf_to_hbitmaps_alpha_winxp): Rename the variables for the
	color bitmap to have "color" in their name, for similarity with
	pixbuf_to_hbitmaps_normal(). Create an 1-bit mask bitmap (DIB
	section) using create_color_bitmap(), not CreateBitmap().
	Initialize the mask bitmap with ones for those pixels in the color
	bitmap where the alpha is zero, zeros for other pixels. Although
	the docs claim otherwise, using an unitialized bitmap for the mask
	together with a color bitmap that has alpha did not work if the
	color bitmap had zero alpha everywhere, like the blank icon used
	in gtktrayicon.c.
	(_gdk_win32_pixbuf_to_hicon_supports_alpha): Check
	G_WIN32_IS_NT_BASED() first, so we can pretend being on Win9x by