@@ -1,5 +1,8 @@
 2005-11-07  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtkfilechooserdefault.c (shortcuts_reorder): Don't
+	looks the bookmark label when reordering.  (#320720, Jeremy Cook)
+
 	* gtk/gtkpathbar.[hc]: Set focus-on-click to FALSE for all buttons.
 	Don't grab focus when a slider button is pressed, instead, use
 	a bit in the pathbar struct to determine whether to scroll up
